--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -18,8 +18,7 @@
 .card_title{
    font-size: 30px;
    font-weight: bold;
-   color: chartreuse;
-   margin: 40px;
+   color: rgb(255, 251, 0);
 }
 
 .card_info{
