--- a/src/homeworks/hw_02/styles.css
+++ b/src/homeworks/hw_02/styles.css
@@ -3,6 +3,6 @@
   flex: 1;
   background-color: rgb(0, 48, 32);
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 20;
 }
