--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -17,3 +17,13 @@
 .button_component:hover{
     background-color: rgb(179, 0, 255);
 }
+
+.buttons_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 15px;
+}
+.button_control {
+  width: 300px;
+}
