--- a/src/components/LoginForm/loginForm.css
+++ b/src/components/LoginForm/loginForm.css
@@ -6,8 +6,8 @@
   align-items: center;
   justify-content: center;
   border-radius: 4px;
-  width: 590;
-  height: 450;
+  width: 590px;
+  height: 450px;
   padding: 60px;
   gap: 30px;
   border: 1px solid black;
